Abstractions refactored
- DirectInvoke response assertion is optional, moved to a different method.
- added an open toolbar abstraction method (if open check)